<?xml version="1.0"?>
<package format="2">
  <name>smach_usecase_srv</name>
  <version>1.0.0</version>
  <description>The smach_usecase_srv package</description>

  <maintainer email="oyabushun@gmail.com">Oyabu Shun</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>
</package>
